# SimpleMessanger

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: CI.yml
include/: ClientLogic.hpp  Executor.hpp  Message.hpp  Notifier.hpp  Notifier.inl  SincQueue.hpp  SincQueue.inl  TCP copy.hpp  TCP.hpp
include/detail/: ClientCommands.hpp  ClientLogic.hpp  ClientsTable.hpp  LaunchMode.hpp  LoginListener.hpp  LowLevelMessage.hpp  ResendingListener.hpp  ServerCommandParser.hpp
include/logic/: Client.hpp  Interfaces.hpp  Server.hpp  ServerCommands.hpp
libs/partial_boost/: CMakeLists.txt
src/: Executor.cpp  Message.cpp  TCP.cpp  client.cpp  main.cpp  server.cpp
src/detail/: ClientCommands.cpp  ClientLogic.cpp  ClientsTable.cpp  LogicListener.cpp  LoginListener.cpp  LowLevelMessage.cpp  ResendingListener.cpp  ServerCommandParser.cpp
src/logic/: Client.cpp  Server.cpp  ServerCommands.cpp
tests/: CMakeLists.txt  Connection.cpp  Executor.cpp  Message.cpp  SincQueue.cpp
