add_subdirectory(serialization)
add_subdirectory(array)
add_subdirectory(assert)
add_subdirectory(config)
add_subdirectory(core)
add_subdirectory(detail)
add_subdirectory(integer)
add_subdirectory(io)
add_subdirectory(iterator)
add_subdirectory(move)
add_subdirectory(mpl)
add_subdirectory(optional)
add_subdirectory(predef)
add_subdirectory(preprocessor)
add_subdirectory(smart_ptr)
add_subdirectory(spirit)
add_subdirectory(static_assert)
add_subdirectory(type_traits)
add_subdirectory(unordered)
add_subdirectory(utility)
add_subdirectory(variant)
add_subdirectory(function)
add_subdirectory(concept_check)
add_subdirectory(conversion)
add_subdirectory(endian)
add_subdirectory(function_types)
add_subdirectory(fusion)
add_subdirectory(phoenix)
add_subdirectory(pool)
add_subdirectory(proto)
add_subdirectory(range)
add_subdirectory(thread)
add_subdirectory(mp11)
add_subdirectory(tuple)
add_subdirectory(container_hash)
add_subdirectory(type_index)
add_subdirectory(typeof)
add_subdirectory(bind)
add_subdirectory(throw_exception)
add_subdirectory(describe)
add_subdirectory(regex)
add_subdirectory(functional)
add_subdirectory(atomic)
add_subdirectory(chrono)
add_subdirectory(container)
add_subdirectory(date_time)
add_subdirectory(exception)
add_subdirectory(intrusive)
add_subdirectory(system)
add_subdirectory(winapi)
add_subdirectory(algorithm)
add_subdirectory(lexical_cast)
add_subdirectory(align)
add_subdirectory(ratio)
add_subdirectory(tokenizer)
add_subdirectory(variant2)
add_subdirectory(numeric_conversion)
add_subdirectory(rational)
